clusters/cluster0/kubernetes/apps/media/radarr/app/radarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: radarr
  name: radarr
  namespace: media
spec:
  template:
    metadata:
      labels:
        app: radarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: control-00
      containers:
        - image: lscr.io/linuxserver/radarr:latest
          imagePullPolicy: Always
          name: radarr
          ports:
          - name: radarr-port
            containerPort: 7878
            protocol: TCP
          volumeMounts:
          - name: radarr-config
            mountPath: /config
          - name: radarr-media
            mountPath: /movies
          resources:
            requests:
              memory: 1500Mi
              cpu: 100m
            limits:
              memory: 3Gi
              cpu: "2"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: radarr-config
        persistentVolumeClaim:
          claimName: "radarr-config"
      - name: radarr-media
        persistentVolumeClaim:
          claimName: "media-pvc"
  selector:
    matchLabels:
      app: radarr
