clusters/cluster0/kubernetes/apps/media/radarr/app/radarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: radarr
  ports:
    - port: 7878
      protocol: TCP
      targetPort: 7878
