clusters/cluster0/kubernetes/apps/media/radarr/app/radarr-external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: biggs.dog
spec:
  ingressClassName: external
  rules:
  - host: radarr.biggs.dog
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: radarr-service
            port:
              number: 7878
